# iOpenPod

./: .flake8  .gitignore  AGENTS.md  CONTEXT.md  LICENSE  Pipfile  README.md  SYNC.md  artdb.json  compare_mhyp_hex.py  data.json  debug_compare.py  device_info.py  diagnose_ipod.py  diagnose_mhod_detail.py  diagnose_sections.py  find_master_playlist.py  iOpenPod.spec  idb.json  ipod_iokit_query.py  ipod_models.py  ipod_usb_query.py  main.py  make_surgical_tests.py  oldMain.py  pyi_rth_macos_nsapp.py  pyproject.toml  settings.py  sysinfo_authority.py  test_date.py  test_scrollbar.py  test_unified.py  verify_hash72.py
.github/: FUNDING.yml  copilot-instructions.md
ArtworkDB_Parser/: __init__.py  chunk_parser.py  constants.py  mhfd_parser.py  mhii_parser.py  mhli_parser.py  mhni_parser.py  mhod_parser.py  mhsd_parser.py  parser.py
ArtworkDB_Shared/: mhni.py
ArtworkDB_Writer/: __init__.py  art_extractor.py  artwork_types.py  artwork_writer.py  artworkdb_chunks.py  ithmb_codecs.py  rgb565.py
GUI/: app.py  auto_updater.py  device_scanner.py  fonts.py  glyphs.py  imgMaker.py  imgeMaker.py  ipod_images.py  main.py  notifications.py  settings.py  styles.py  test.py  test2.py
PodcastManager/: artwork.py  downloader.py  feed_parser.py  itunes_search.py  models.py  podcast_sync.py  subscription_store.py
SQLiteDB_Writer/: cbk_writer.py  dynamic_writer.py  extras_writer.py  genius_writer.py  library_writer.py  locations_writer.py  sqlite_writer.py
SubsonicManager/: __init__.py  artwork.py  client.py  mapping.py  plan_builder.py
SyncEngine/: __init__.py  _db_io.py  _formats.py  _playlist_builder.py  _track_conversion.py  album_chapters.py  audio_fingerprint.py  backup_manager.py  checkpoint.py  contracts.py  database_commit.py  dependency_manager.py  diff_engine.py  eta.py  existing_track_matcher.py  fingerprint_diff_engine.py  integrity.py  itunes_prefs.py  lastfm_scrobbler.py  mapping.py  pc_library.py  photos.py  plan_validator.py  planning_stages.py  playlist_parser.py  quick_writes.py  review_selection.py  scrobbler.py  spl_evaluator.py  sync_executor.py  sync_playlist_files.py  test_fingerprint_sync.py  test_sync.py  transcode_cache.py  transcoder.py  unknown_metadata.py
app_core/: __init__.py  bootstrap.py  context.py  controllers.py  database_storage.py  device_access.py  dropped_files.py  jobs.py  qt_runtime.py  runtime.py  services.py  sync_plan_builder.py  sync_plan_merge.py  sync_review_model.py  sync_session.py
cli/: config.py  main.py
docs/: GUI_DESIGN_SYSTEM.md  SYNC.md  deep_analysis_theories.md  i18n.md  iTunesCDB-internals.md  index.html  install-help.html  iokit-scsi-vpd.md  ipod-playlist-datasets.md  robots.txt  sitemap.xml
iOpenPod/: installer.py  main.py  updater.py
iTunesDB_Analyzer/: bridge.py  cli.py  field_schema.py  hypothesis_db.py  models.py  passes.py  reports.py
iTunesDB_Parser/: __init__.py  _parsing.py  artwork_links.py  chunk_parser.py  constants.py  ipod_library.py  mhbd_parser.py  mhia_parser.py  mhii_parser.py  mhip_parser.py  mhit_parser.py  mhla_parser.py  mhli_parser.py  mhlp_parser.py  mhlt_parser.py  mhod_parser.py  mhsd_parser.py  mhyp_parser.py  parser.py  playcounts.py
iTunesDB_Shared/: __init__.py  constants.py  extraction.py  field_base.py  (+7 more)
(+290 files in other folders)
