[project]
name = "iopenpod"
version = "0.1.0"
description = "iPod Sync tool"
authors = [
    {name = "John Gibbons", email = "johngibbons167@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dearpygui>=2.0.0,<3.0.0",
    "pyqt6>=6.9.1,<7.0.0",
    "numpy>=2.3.0,<3.0.0",
    "pillow>=11.2.1,<12.0.0",
    "pycryptodome>=3.20.0,<4.0.0",
]

[dependency-groups]
dev = []
