[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "iopenpod"
version = "0.1.0"
description = "Open-source iPod Classic sync tool — manage your iPod music library without iTunes. Reads and writes iTunesDB directly."
authors = [
    {name = "John Gibbons", email = "johngibbons167@gmail.com"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.13"
keywords = [
    "ipod", "ipod-classic", "itunes", "itunesdb", "music-sync",
    "ipod-manager", "pyqt6", "music-library", "ipod-sync",
    "itunes-alternative", "acoustic-fingerprint",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Sound/Audio",
    "Topic :: Multimedia :: Sound/Audio :: Players",
]
dependencies = [
    "pyqt6>=6.9.1,<7.0.0",
    "numpy>=2.3.0,<3.0.0",
    "pillow>=11.2.1,<12.0.0",
    "pycryptodome>=3.20.0,<4.0.0",
    "mutagen>=1.47.0,<2.0.0",
    "pyusb>=1.3.1",
    "wasmtime>=30.0.0",
    "certifi>=2024.0.0",
]

[project.scripts]
iopenpod = "main:main"

[dependency-groups]
dev = []

[tool.hatch.build.targets.wheel]
packages = [
    "GUI",
    "iTunesDB_Parser",
    "iTunesDB_Writer",
    "ArtworkDB_Parser",
    "ArtworkDB_Writer",
    "SyncEngine",
]

[tool.flake8]
# Allow line breaks before binary operators (W503) — matches Black's style
extend-ignore = ["W503"]
# Keep line length reasonable; adjust if you prefer a different value
max-line-length = 88
